--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id="title">Welcome to Ember</h2>
+<div class="jumbotron">
+  <div class="container">
+    {{#link-to 'index'}}<h1>Craigslist</h1>{{/link-to }}
+  </div>
+</div>
 
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div>
