Add listings to categories

--- a/app/templates/category.hbs
+++ b/app/templates/category.hbs
@@ -2,7 +2,7 @@
 
 <ul>
   {{#each model.listings as |listing|}}
-    {{listing-tile category=model}}
+    {{listing-tile listing=listing}}
   {{/each}}
 </ul>
 
