--- a/app/templates/category.hbs
+++ b/app/templates/category.hbs
@@ -1,10 +1,5 @@
 <h2>Welcome to the {{model.name}} Page</h2>
 
-<ul>
-  {{#each model.listings as |listing|}}
-    {{listing-tile listing=listing}}
-  {{/each}}
-</ul>
-
-
 {{new-listing saveListing='saveListing' category=model}}
+
+{{sorted-listings model=model}}
