--- a/app/templates/components/edit-listing.hbs
+++ b/app/templates/components/edit-listing.hbs
@@ -1,37 +1,38 @@
-{{#if addNewListing}}
-  <div class="listingForm">
+{{#if editFormShow}}
+  <div class="editForm">
     <form>
       <div class="form-group">
         <label for="title">Listing Title</label>
-        {{input value=title id="title"}}
+        {{input value=title value=listing.title id="title"}}
       </div>
       <div class="form-group">
         <label for="author">Your Name</label>
-        {{input value=author id="author"}}
+        {{input value=listing.author id="author"}}
       </div>
       <div class="form-group">
         <label for="price">Listing Price</label>
-        {{input value=price id="price"}}
+        {{input value=listing.price id="price"}}
       </div>
       <div class="form-group">
         <label for="description">Item Description</label>
-        {{textarea value=description id="description"}}
+        {{textarea value=listing.description id="description"}}
       </div>
       <div class="form-group">
         <label for="image">Image URL</label>
-        {{input value=image id="image"}}
+        {{input value=listing.image id="image"}}
       </div>
       <div class="form-group">
         <label for="location">Location</label>
-        {{input value=location id="location"}}
+        {{input value=listing.location id="location"}}
       </div>
       <div class="form-group">
         <label for="contact">Contact Information</label>
-        {{input value=contact id="contact"}}
+        {{input value=listing.contact id="contact"}}
       </div>
-      <button {{action 'saveListing'}}>Save Listing</button>
+      <button {{action 'saveEdit' listing}}>Save Listing</button>
     </form>
   </div>
-{{else}}
-  <button {{action 'listingFormShow'}}>Post A Listing</button>
+  {{else}}
+    <button {{action 'showEditForm'}}>Edit Listing</button>
+
 {{/if}}
