--- a/app/templates/listing.hbs
+++ b/app/templates/listing.hbs
@@ -1,13 +1,13 @@
 <div class="listingItem">
+  <h2>{{model.title}} - ${{model.price}} ({{model.location}})</h2>
   <div class="detailImage" style="background: url('{{model.image}}'); background-size: cover;"></div>
     <p>{{timeSlice model.date}}</p>
-    <h4>{{model.title}}</h4>
-    <p>({{model.location}})</p>
-    <p class="listingPrice">${{model.price}}</p>
     <p>{{model.description}} </p>
     {{#if model.contact}}
       <p>Contact Information: {{model.contact}}</p>
     {{/if}}
 </div>
+
+<button class="btn btn-danger" {{action 'delete' model}}>Delete</button>
 
 {{edit-listing listing=model saveEdit='saveEdit'}}
