--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -19,3 +19,21 @@
 .price p {
   margin-bottom: 2px;
 }
+
+.jumbotron {
+  text-align: center;
+}
+
+a {
+  transition: all 500ms ease-in-out;
+}
+
+a:hover {
+  text-decoration: none;
+  letter-spacing: 2px;
+  transition: all 500ms ease-in-out;
+}
+
+.jumbotron h1 {
+  text-shadow: 1px 1px 1px gray;
+}
