--- a/app/templates/components/category-tile.hbs
+++ b/app/templates/components/category-tile.hbs
@@ -1,1 +1,1 @@
-{{#link-to 'category' category.id}}{{category.name}}{{/link-to}}
+{{#link-to 'category' category.id}}<h3>{{category.name}}</h3>{{/link-to}}
